[package]
name = "onefmt-find-biome"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
onefmt-plugin-utils = { git = "https://github.com/nahco314/onefmt-plugin-utils", version = "0.1.0" }
serde_json = "1.0.127"
